update meluxina usage

--- a/Usage_Meluxina.ipynb
+++ b/Usage_Meluxina.ipynb
@@ -114,6 +114,81 @@
     "co2 = energy * 409.8438/1000\n",
     "f\"corresponding to {co2:.2f} CO2 kg Emissions\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bfbdfc5",
+   "metadata": {},
+   "source": [
+    "# Scaling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8255b59b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scale = pd.read_csv(\"scaling.csv\")\n",
+    "scale[\"Tf*\"] = scale[\"rtime\"] * 60*60 * scale[\"ncores\"] / 3e6\n",
+    "scale[\"Speedup\"] = scale[\"rtime\"].iloc[0] / scale[\"rtime\"]\n",
+    "scale[\"Ideal\"] = scale[\"ncores\"] / scale[\"ncores\"].iloc[0]\n",
+    "scale[\"Efficiency\"] = scale[\"Speedup\"] / scale[\"Ideal\"] * 100\n",
+    "scale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e066e3d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(scale.hvplot.line(x=\"ncores\", y=\"rtime\", grid=True,logx=True, logy=True, ylabel=\"Walltime (hours)\",xlabel=\"Number of cores\")*\\\n",
+    "scale.hvplot.scatter(x=\"ncores\", y=\"rtime\", marker=\"o\")).opts(height=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd67cb82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(scale.hvplot.line(x=\"ncores\", y=\"Speedup\", grid=True, ylabel=\"Speedup\",xlabel=\"Number of cores\", label=\"benchmarked\")*\\\n",
+    " scale.hvplot.line(x=\"ncores\", y=\"Ideal\", grid=True, label=\"ideal\", c='k', line_dash=\"dashed\")*\\\n",
+    " scale.hvplot.scatter(x=\"ncores\", y=\"Speedup\")).opts(height=500, ylim=(1,2.2), legend_position = \"bottom_right\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05469c59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(scale.hvplot.line(x=\"ncores\", y=\"Efficiency\", grid=True, ylabel=\"Parallel efficiency (%)\",xlabel=\"Number of cores\")*\\\n",
+    " scale.hvplot.scatter(x=\"ncores\", y=\"Efficiency\")).opts(height=500, legend_position = \"bottom_right\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c793ef1",
+   "metadata": {},
+   "source": [
+    "table for word document:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87973897",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scale[[\"nodes\",\"id\", \"ncores\", \"rtime\",\"Tf*\",\"Speedup\",\"Ideal\",\"Efficiency\"]]"
+   ]
   }
  ],
  "metadata": {
