update meluxina consumption

--- a/Usage_Meluxina.ipynb
+++ b/Usage_Meluxina.ipynb
@@ -130,12 +130,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scale = pd.read_csv(\"scaling.csv\")\n",
-    "scale[\"Tf*\"] = scale[\"rtime\"] * 60*60 * scale[\"ncores\"] / 3e6\n",
-    "scale[\"Speedup\"] = scale[\"rtime\"].iloc[0] / scale[\"rtime\"]\n",
-    "scale[\"Ideal\"] = scale[\"ncores\"] / scale[\"ncores\"].iloc[0]\n",
+    "scale = pd.read_csv(\"scaling_hydrogen.csv\", sep = \"\\s+|\\t+|\\s+\\t+|\\t+\\s+\")\n",
+    "scale[\"walltime\"] = scale[\"steps_total\"]\n",
+    "scale[\"Tf*\"] = scale[\"walltime\"] * 60*60 * scale[\"no_tasks\"] / 3e6\n",
+    "scale[\"Speedup\"] = scale[\"walltime\"].iloc[-1] / scale[\"walltime\"]\n",
+    "scale[\"Ideal\"] = scale[\"no_tasks\"] / scale[\"no_tasks\"].iloc[-1]\n",
     "scale[\"Efficiency\"] = scale[\"Speedup\"] / scale[\"Ideal\"] * 100\n",
-    "scale"
+    "scale[[\"no_tasks\",\"walltime\",\"Tf*\",\"Speedup\",\"Ideal\",\"Efficiency\"]].iloc[::-1]"
    ]
   },
   {
@@ -145,8 +146,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(scale.hvplot.line(x=\"ncores\", y=\"rtime\", grid=True,logx=True, logy=True, ylabel=\"Walltime (hours)\",xlabel=\"Number of cores\")*\\\n",
-    "scale.hvplot.scatter(x=\"ncores\", y=\"rtime\", marker=\"o\")).opts(height=500)"
+    "(scale.hvplot.line(x=\"no_tasks\", y=\"walltime\", grid=True,logx=True, logy=True, ylabel=\"Walltime (hours per model day)\",xlabel=\"Number of cores\")*\\\n",
+    "scale.hvplot.scatter(x=\"no_tasks\", y=\"walltime\", marker=\"o\")).opts(height=500)"
    ]
   },
   {
@@ -156,9 +157,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(scale.hvplot.line(x=\"ncores\", y=\"Speedup\", grid=True, ylabel=\"Speedup\",xlabel=\"Number of cores\", label=\"benchmarked\")*\\\n",
-    " scale.hvplot.line(x=\"ncores\", y=\"Ideal\", grid=True, label=\"ideal\", c='k', line_dash=\"dashed\")*\\\n",
-    " scale.hvplot.scatter(x=\"ncores\", y=\"Speedup\")).opts(height=500, ylim=(1,2.2), legend_position = \"bottom_right\")"
+    "(scale.hvplot.line(x=\"no_tasks\", y=\"Speedup\", grid=True, ylabel=\"Speedup\",xlabel=\"Number of cores\", label=\"benchmarked\")*\\\n",
+    " scale.hvplot.line(x=\"no_tasks\", y=\"Ideal\", grid=True, label=\"ideal\", c='k', line_dash=\"dashed\")*\\\n",
+    " scale.hvplot.scatter(x=\"no_tasks\", y=\"Speedup\")).opts(height=500, ylim=(1,2.6), legend_position = \"bottom_right\")"
    ]
   },
   {
@@ -168,8 +169,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(scale.hvplot.line(x=\"ncores\", y=\"Efficiency\", grid=True, ylabel=\"Parallel efficiency (%)\",xlabel=\"Number of cores\")*\\\n",
-    " scale.hvplot.scatter(x=\"ncores\", y=\"Efficiency\")).opts(height=500, legend_position = \"bottom_right\")"
+    "(scale.hvplot.line(x=\"no_tasks\", y=\"Efficiency\", grid=True, ylabel=\"Parallel efficiency (%)\",xlabel=\"Number of cores\")*\\\n",
+    " scale.hvplot.scatter(x=\"no_tasks\", y=\"Efficiency\")).opts(height=500, legend_position = \"bottom_right\")"
    ]
   },
   {
@@ -187,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scale[[\"nodes\",\"id\", \"ncores\", \"rtime\",\"Tf*\",\"Speedup\",\"Ideal\",\"Efficiency\"]]"
+    "scale"
    ]
   }
  ],
