add max_Hm0 image

--- a/mesh_tomawac.ipynb
+++ b/mesh_tomawac.ipynb
@@ -45,7 +45,7 @@
     "7. Interpolate ERA5 wind data onto the mesh\n",
     "8. Convert to wind Selafin binary\n",
     "9. Visualise TOMAWAC results directly in the notebook: \n",
-    "![WAC_global](assets/max_Hm0_TOMAWAC.png)\n",
+    "![WAC_global](./assets/max_Hm0_TOMAWAC.png)\n",
     "\n",
     "## 1 - Generate the mesh\n",
     "\n",
