update typhoon analysis

--- a/typhoon_forensic_analysis.ipynb
+++ b/typhoon_forensic_analysis.ipynb
@@ -43,7 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ioc_stations = searvey.get_ioc_stations()"
+    "ioc_stations = searvey.get_ioc_stations()\n",
+    "ioc_stations"
    ]
   },
   {
@@ -74,12 +75,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_stations.hvplot.points(\n",
+    "plot_ = selected_stations.hvplot.points(\n",
     "    geo=True,\n",
     "    tiles=True,\n",
     "    hover_cols=[\"ioc_code\"],\n",
+    "    s=100,\n",
+    "    line_color='k',\n",
     "    title = \"stations in the selected region\"\n",
-    ")"
+    ").opts(width=600, height=700)\n",
+    "plot_"
    ]
   },
   {
@@ -176,13 +180,14 @@
     "for irow, row in selected_stations.iterrows():\n",
     "    lat = row.lat\n",
     "    ioc_code = row.ioc_code\n",
-    "    df_raw = searvey.fetch_ioc_station(\n",
-    "        ioc_code,\n",
-    "        pd.Timestamp.now()-pd.Timedelta(days=90), # we need at least 90 days (in theory we'd need more..) to remove properly tidal constituents\n",
-    "        pd.Timestamp.now()\n",
-    "    )\n",
-    "    df_raw.attrs = {**serialize(dict(row)), **{\"signal_type\": \"raw\"}}\n",
-    "    df_raw.to_parquet(f\"data/raw/{ioc_code}.parquet\")"
+    "    if ioc_code in list(detide_selection.keys()):\n",
+    "        df_raw = searvey.fetch_ioc_station(\n",
+    "            ioc_code,\n",
+    "            pd.Timestamp.now()-pd.Timedelta(days=90), # we need at least 90 days (in theory we'd need more..) to remove properly tidal constituents\n",
+    "            pd.Timestamp.now()\n",
+    "        )\n",
+    "        df_raw.attrs = {**serialize(dict(row)), **{\"signal_type\": \"raw\"}}\n",
+    "        df_raw.to_parquet(f\"data/raw/{ioc_code}.parquet\")"
    ]
   },
   {
@@ -214,6 +219,14 @@
    "source": [
     "Let's look at the stations of interest"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dafa6990",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -250,7 +263,7 @@
     "        )\n",
     "        df_surge.attrs = dict(row)\n",
     "        df_surge.attrs = {**serialize(dict(row)), **{\"signal_type\": \"detide\"}}\n",
-    "        df_surge.to_frame().to_parquet(f\"data/raw/{row.ioc_code}.parquet\")"
+    "        df_surge.to_frame().to_parquet(f\"data/surge/{row.ioc_code}.parquet\")"
    ]
   },
   {
@@ -260,14 +273,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ioc_stations[ioc_stations.ioc_code.isin(list(detide_selection.keys()))].hvplot.points(\n",
+    "(plot_*ioc_stations[ioc_stations.ioc_code.isin(list(detide_selection.keys()))].hvplot.points(\n",
     "    geo=True,\n",
     "    tiles=True,\n",
     "    c = 'r',\n",
-    "    s=100,\n",
+    "    s=50,\n",
     "    hover_cols=[\"ioc_code\"],\n",
     "    title = \"stations that recorded a surge\"\n",
-    ")"
+    ")).opts(width=800, height=800)"
    ]
   },
   {
