update typhoon analysis

--- a/typhoon_forensic_analysis.ipynb
+++ b/typhoon_forensic_analysis.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "Libraries needed for this notebook: \n",
     "\n",
-    "`pip install searvey hvplot utide ipykernel geoviews pyarrow`"
+    "`pip install searvey hvplot utide ipykernel geoviews pyarrow copernicusmarine`"
    ]
   },
   {
@@ -32,6 +32,8 @@
     "import utide\n",
     "import pandas as pd\n",
     "import hvplot.pandas\n",
+    "import hvplot.xarray\n",
+    "import copernicusmarine as cm\n",
     "\n",
     "from shapely.geometry import box"
    ]
@@ -48,13 +50,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "af9d8147",
+   "metadata": {},
+   "source": [
+    "define a bounding box for the area of interest"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ce186fe9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bbox = box(100.0, -5.0, 130.0, 25.0)  # lon_min, lat_min, lon_max, lat_max"
+    "lon_min, lat_min, lon_max, lat_max  = 100.0, -5.0, 130.0, 25.0\n",
+    "bbox = box(lon_min, lat_min, lon_max, lat_max)  # lon_min, lat_min, lon_max, lat_max"
    ]
   },
   {
@@ -88,10 +99,101 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69d31dd5",
+   "id": "72d8f8ee",
    "metadata": {},
    "source": [
-    "## detide the stations"
+    "# overlay with copernicus data\n",
+    "get your credentials at https://data.marine.copernicus.eu/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e06d18de",
+   "metadata": {},
+   "source": [
+    "Global Significant wave height 3 Hourly data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39c1f0c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "startdate = pd.Timestamp(2025, 11, 9)\n",
+    "enddate = pd.Timestamp(2025, 11, 12)\n",
+    "ds_wave = cm.open_dataset(\n",
+    "    dataset_id=\"cmems_mod_glo_wav_anfc_0.083deg_PT3H-i\", \n",
+    "    start_datetime=startdate, \n",
+    "    end_datetime=enddate, \n",
+    "    minimum_longitude = lon_min,\n",
+    "    maximum_longitude = lon_max,\n",
+    "    minimum_latitude = lat_min,\n",
+    "    maximum_latitude = lat_max,\n",
+    "    )\n",
+    "max_Hs = ds_wave.VHM0.max(dim=\"time\")\n",
+    "max_Hs = max_Hs.compute() # to load data into RAM\n",
+    "max_Hs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e878f934",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_Hs.hvplot.image(cmap = \"rainbow4\", geo=True).opts(height = 800, width=800) * plot_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "683bc61b",
+   "metadata": {},
+   "source": [
+    "Global Ocean Physics Analysis and Forecast - 1 Hourly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c1a32f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "startdate = pd.Timestamp(2025, 11, 9)\n",
+    "enddate = pd.Timestamp(2025, 11, 12)\n",
+    "ds_ocean = cm.open_dataset(\n",
+    "    dataset_id=\"cmems_mod_glo_phy_anfc_0.083deg_PT1H-m\", \n",
+    "    start_datetime=startdate, \n",
+    "    end_datetime=enddate, \n",
+    "    minimum_longitude = lon_min,\n",
+    "    maximum_longitude = lon_max,\n",
+    "    minimum_latitude = lat_min,\n",
+    "    maximum_latitude = lat_max,\n",
+    "    )\n",
+    "max_elev = ds_ocean.zos.max(dim=\"time\").isel(depth=0) # ! the dataset is 3D, you need to select a depth layer\n",
+    "max_elev = max_elev.compute() # to load data into RAM\n",
+    "max_elev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cac59257",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_elev.hvplot.image(cmap = \"rainbow4\", geo=True).opts(height = 800, width=800) * plot_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca7e9d4a",
+   "metadata": {},
+   "source": [
+    "# detide function"
    ]
   },
   {
@@ -180,7 +282,7 @@
     "for irow, row in selected_stations.iterrows():\n",
     "    lat = row.lat\n",
     "    ioc_code = row.ioc_code\n",
-    "    if ioc_code in list(detide_selection.keys()):\n",
+    "    if ioc_code in list(selected_stations.keys()):\n",
     "        df_raw = searvey.fetch_ioc_station(\n",
     "            ioc_code,\n",
     "            pd.Timestamp.now()-pd.Timedelta(days=90), # we need at least 90 days (in theory we'd need more..) to remove properly tidal constituents\n",
@@ -219,14 +321,6 @@
    "source": [
     "Let's look at the stations of interest"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dafa6990",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
